<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zhihuishu.currency.SecondActivity">

    <EditText
        android:id="@+id/sgd"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="3dp"
        android:hint="@string/sgd"
        android:textColor="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/cny"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/submit"
        android:layout_marginStart="90dp"
        android:layout_marginTop="13dp"
        android:hint="@string/cny"
        android:textColor="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/usd"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/submit2"
        android:layout_marginStart="90dp"
        android:layout_marginTop="13dp"
        android:hint="@string/usd"
        android:textColor="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/hkd"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/submit3"
        android:layout_marginTop="13dp"
        android:hint="@string/hkd"
        android:layout_marginStart="90dp"
        android:textColor="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/gbp"
        android:layout_width="280dp"
        android:layout_marginStart="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/submit4"
        android:layout_marginTop="13dp"
        android:hint="@string/gbp"
        android:textColor="@color/colorPrimaryDark" />


    <Button
        android:id="@+id/submit"
        android:layout_width="285dp"
        android:layout_height="29dp"
        android:layout_below="@+id/sgd"
        android:layout_alignParentRight="true"
        android:layout_marginTop="18dp"
        android:layout_marginRight="35dp"
        android:background="#FF008577"
        android:onClick="click"
        android:text="@string/exchange"
        android:textAllCaps="false"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/submit2"
        android:layout_width="285dp"
        android:layout_height="29dp"
        android:layout_below="@+id/cny"
        android:layout_alignParentRight="true"
        android:layout_marginTop="18dp"
        android:layout_marginRight="35dp"
        android:background="#FF008577"
        android:onClick="click2"
        android:text="@string/exchange"
        android:textAllCaps="false"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/submit3"
        android:layout_width="285dp"
        android:layout_height="29dp"
        android:layout_below="@+id/usd"
        android:layout_alignParentRight="true"
        android:layout_marginTop="18dp"
        android:layout_marginRight="35dp"
        android:background="#FF008577"
        android:onClick="click3"
        android:text="@string/exchange"
        android:textAllCaps="false"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/submit4"
        android:layout_width="285dp"
        android:layout_height="29dp"
        android:layout_below="@+id/hkd"
        android:layout_alignParentRight="true"
        android:layout_marginTop="18dp"
        android:layout_marginRight="35dp"
        android:background="#FF008577"
        android:onClick="click4"
        android:text="@string/exchange"
        android:textAllCaps="false"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/submit5"
        android:layout_width="285dp"
        android:layout_height="29dp"
        android:layout_below="@+id/gbp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="18dp"
        android:layout_marginRight="35dp"
        android:background="#FF008577"
        android:onClick="click5"
        android:text="@string/exchange"
        android:textAllCaps="false"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/reset"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="57dp"
        android:background="#528B8B"
        android:onClick="reset"
        android:text="@string/reset"
        android:textAllCaps="false"
        android:textColor="#FFFFFF" />


    <ImageView
        android:id="@+id/china"
        android:layout_width="57dp"
        android:layout_height="54dp"
        android:layout_below="@+id/cny"
        android:layout_alignParentRight="true"
        android:layout_marginTop="-19dp"
        android:layout_marginRight="339dp"
        app:srcCompat="@drawable/cn" />

    <ImageView
        android:id="@+id/singaporean"
        android:layout_width="57dp"
        android:layout_height="54dp"
        android:layout_below="@+id/cny"
        android:layout_alignParentRight="true"
        android:layout_marginTop="-122dp"
        android:layout_marginRight="339dp"
        app:srcCompat="@drawable/sg" />

    <ImageView
        android:id="@+id/USA"
        android:layout_width="57dp"
        android:layout_height="54dp"
        android:layout_below="@+id/cny"
        android:layout_alignParentRight="true"
        android:layout_marginTop="86dp"
        android:layout_marginRight="339dp"
        app:srcCompat="@drawable/us" />

    <ImageView
        android:id="@+id/Hongkong"
        android:layout_width="57dp"
        android:layout_height="54dp"
        android:layout_below="@+id/cny"
        android:layout_alignParentRight="true"
        android:layout_marginTop="194dp"
        android:layout_marginRight="338dp"
        app:srcCompat="@drawable/hk" />

    <ImageView
        android:id="@+id/UnitedKing"
        android:layout_width="57dp"
        android:layout_height="54dp"
        android:layout_below="@+id/cny"
        android:layout_alignParentRight="true"
        android:layout_marginTop="289dp"
        android:layout_marginRight="337dp"
        app:srcCompat="@drawable/gb" />

</RelativeLayout>